[package]
name = "stack-underflow"
version = "0.1.0"
edition = "2021"
description = "Rust Web Server build using Axum while studying the Rust Web Development book"
license = "MIT"
repository = "github.com:austinJayIves/RustWebDevelopment.git"
readme = "README.md"
keywords = ["Q&A", "Axum", "Example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
